--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{{title}}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" href="/favicon.jpg">
     <!-- LOCAL STYLESHEETS -->
     <link rel='stylesheet' href='/stylesheets/main.css' />
     <link rel='stylesheet' href='/stylesheets/bootstrap/css/bootstrap.css' />
     <link rel='stylesheet' href='/stylesheets/font-awesome/css/font-awesome.css' />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- LOCAL BOOTSTRAP FILES -->
     <script src="/javascripts/jquery.min.js"></script>
     <script src="/javascripts/popper.js"></script>
@@ -58,5 +60,12 @@
     </div>
     <br>
 </footer>
+
+<script>
+    setTimeout( () => {
+        document.querySelector('.working').style.display = 'block';
+        document.querySelector('.loader').style.display = 'none';
+    }, 1000)
+</script>
 
 </html>
