--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,6 +1,6 @@
 <body>
     <br>
-    <div class="container">
+    <div class="container working">
         <h1>
             Welcome <strong>{{username}}</strong>
             <hr>
@@ -32,6 +32,9 @@
             <input type="submit" name="submit" id="" value="submit" class="btn btn-outline-dark btn-lg">
         </form>
     </div>
+    <p class="loader">
+        <i class="fa fa-spinner w3-spin" style="font-size:64px"></i>
+    </p>
 </body>
 <style>
     .login,
