--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,13 +1,21 @@
 body {
     background: url('/img/corvids5.jpg') no-repeat;
     background-size: cover;
-    background-attachment: fixed
+    background-attachment: fixed;
 }
 .container {
+    animation: FadeIn 2s;
     padding: 10px;
     background: rgba(255, 255, 255, 0.4);
     border-radius: 5px;
+    animation: fadeIn 1s;
 }
+
+.working {
+    display: none;
+    animation: fadeIn 1s;
+}
+
 .btn {
     cursor: pointer;
 }
@@ -24,4 +32,33 @@ body {
 .navbar a:hover {
     color: ghostwhite;
     text-decoration: none;
+}
+
+.loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 190px;
+    height: 190px;
+    margin: -75px 0 0 -75px;
+    animation: fadeOut 4s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
