--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,11 +1,14 @@
 <body>
     <br>
-    <div class="container">
+    <div class="container working">
         <h1>
             Welcome <strong>{{username}}</strong>
             <hr>
         </h1>
     </div>
+    <p class="loader">
+        <i class="fa fa-spinner w3-spin" style="font-size:64px"></i>
+    </p>
 </body>
 <style>
     .login,
